--- a/index.html
+++ b/index.html
@@ -99,27 +99,27 @@
         <i class="list__head" data-feather="music"></i>
         <a
           target="blank"
-          href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+          href="https://www.youtube.com/channel/UCSJ4gkVC6NrvII8umztf0Ow"
           class="list__link"
-          >Inspirational</a
+          >lofi</a
         >
         <a
           target="blank"
-          href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+          href="https://www.youtube.com/results?search_query=classic+radio"
           class="list__link"
           >Classic</a
         >
         <a
           target="blank"
-          href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+          href="https://www.youtube.com/watch?v=gxykC33lTiQ&list=UUtylTUUVIGY_i5afsQYeBZA&index=2"
           class="list__link"
-          >Oldies</a
+          >Rap</a
         >
         <a
           target="blank"
           href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
           class="list__link"
-          >Rock</a
+          >#####</a
         >
       </div>
 
