--- a/index.html
+++ b/index.html
@@ -125,20 +125,20 @@
 
       <div class="card list list__2">
         <i class="list__head" data-feather="coffee"></i>
-        <a href="https://www.linkedin.com" target="blank" class="list__link"
-          >LinkedIn</a
+        <a href="https://www.netflix.com/browse" target="blank" class="list__link"
+          >Netflix</a
         >
-        <a href="https://dribbble.com/" target="blank" class="list__link"
-          >Dribble</a
+        <a href="https://twitter.com/home" target="blank" class="list__link"
+          >Twitter</a
         >
-        <a href="https://www.udemy.com/" target="blank" class="list__link"
-          >Udemy</a
+        <a href="https://foundation.app/" target="blank" class="list__link"
+          >Foundation</a
         >
         <a
           href="https://www.figma.com/files/recent"
           target="blank"
           class="list__link"
-          >Figma</a
+          >Disney+</a
         >
       </div>
     </div>
