--- a/index.html
+++ b/index.html
@@ -57,21 +57,21 @@
           <i class="buttonLink__icon" data-feather="github"></i>
         </a>
         <a
-          target="blank"
+          target
           href="https://outlook.live.com/mail/inbox"
           class="buttonLink__link card buttonLink__link-2"
         >
           <i class="buttonLink__icon" data-feather="mail"></i>
         </a>
         <a
-          target="blank"
+          target
           href="https://calendar.google.com/calendar/r"
           class="buttonLink__link card buttonLink__link-3"
         >
           <i class="buttonLink__icon" data-feather="calendar"></i>
         </a>
         <a
-          target="blank"
+          target
           href="https://flipboard.com/"
           class="buttonLink__link card buttonLink__link-4"
         >
@@ -79,13 +79,13 @@
         </a>
         <a
           href="https://columns.app"
-          target="blank"
+          target
           class="buttonLink__link card buttonLink__link-5"
         >
           <i class="buttonLink__icon" data-feather="trello"></i>
         </a>
         <a
-          target="blank"
+          target
           href="https://www.youtube.com/"
           class="buttonLink__link card buttonLink__link-6"
         >
@@ -98,25 +98,25 @@
       <div class="card list list__1">
         <i class="list__head" data-feather="music"></i>
         <a
-          target="blank"
+          target
           href="https://www.youtube.com/channel/UCSJ4gkVC6NrvII8umztf0Ow"
           class="list__link"
           >lofi</a
         >
         <a
-          target="blank"
+          target
           href="https://www.youtube.com/results?search_query=classic+radio"
           class="list__link"
           >Classic</a
         >
         <a
-          target="blank"
+          target
           href="https://www.youtube.com/watch?v=gxykC33lTiQ&list=UUtylTUUVIGY_i5afsQYeBZA&index=2"
           class="list__link"
           >Rap</a
         >
         <a
-          target="blank"
+          target
           href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
           class="list__link"
           >#####</a
@@ -125,18 +125,18 @@
 
       <div class="card list list__2">
         <i class="list__head" data-feather="coffee"></i>
-        <a href="https://www.netflix.com/browse" target="blank" class="list__link"
+        <a href="https://www.netflix.com/browse" target class="list__link"
           >Netflix</a
         >
-        <a href="https://twitter.com/home" target="blank" class="list__link"
+        <a href="https://twitter.com/home" target class="list__link"
           >Twitter</a
         >
-        <a href="https://foundation.app/" target="blank" class="list__link"
+        <a href="https://foundation.app/" target class="list__link"
           >Foundation</a
         >
         <a
           href="https://www.disneyplus.com/de-de/home"
-          target="blank"
+          target=
           class="list__link"
           >Disney+</a
         >
