--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         >
         <a
           href="https://www.disneyplus.com/de-de/home"
-          target=
+          target
           class="list__link"
           >Disney+</a
         >
